fix hero unit on mobile

--- a/deploy/css/main.css
+++ b/deploy/css/main.css
@@ -44,4 +44,6 @@ border-left:1px solid rgba(255,255,255,.75); border-right:1px solid rgba(0,0,0,.
 .navbar .nav li a{display:block; float:none; width:auto; text-align:left; border-bottom:solid 1px #ddd}
 .navbar .nav li:last-child a{border:none}
 #content .row-fluid{padding:0; position:relative}	
-.container-fluid{padding-right:20px}}
+.container-fluid{padding-right:20px}
+.hero-unit{margin:0 -20px 20px; padding: .5em 20px .25em}
+.hero-unit .btn{display:block; width:auto}}
